--- a/Resources/Private/Templates/Carousel/Show.html
+++ b/Resources/Private/Templates/Carousel/Show.html
@@ -24,6 +24,8 @@
                         <h3>
                             <f:format.nl2br>{slide.title}</f:format.nl2br>
                         </h3>
+                        <f:debug>{slide}</f:debug>
+                        <p><f:format.html>{slide.sliderText}</f:format.html></p>
                         <f:if condition="{slide.link}">
                             <f:link.typolink parameter="{slide.link}" class="btn btn-default">
                                 {slide.linkText}
